# django-returns

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml  release.yml
api/: index.html
async-io/: index.html
docs/: api.md  async-io.md  getting-started.md  index.md
docs/stylesheets/: extra.css
getting-started/: index.html
src/django_returns/: apps.py  managers.py  managers.pyi  models.py  models.pyi  utils.py
src/tests/: models.py  settings.py  test_default_manager.py  test_managers.py  test_models.py  test_override_managers.py  test_utils.py
stylesheets/: extra.css
