[project]
name = "django-returns"
version = "0.2.0"
description = "Meaningful Django utils based on Functional Programming"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "brunodantas", email = "bruno.welldm@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "returns>=0.26.0",
]

keywords = ["django", "orm", "functional-programming", "monads", "returns", "result", "maybe", "railway-oriented-programming"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/brunodantas/django-returns"
Repository = "https://github.com/brunodantas/django-returns"
Issues = "https://github.com/brunodantas/django-returns/issues"

[project.optional-dependencies]
dev = [
    "django-stubs>=5.2.8",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.11.1",
    "ruff>=0.14.13",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "django-stubs>=5.2.8",
    "ipython>=8.38.0",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material[imaging]>=9.7.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.11.1",
    "ruff>=0.14.13",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["var-annotated"]

[[tool.mypy.overrides]]
module = "django_returns.managers"
disable_error_code = ["override"]

[tool.django-stubs]
django_settings_module = "tests.settings"
